--- a/src/components/ui/button/button.css
+++ b/src/components/ui/button/button.css
@@ -1,2 +1,34 @@
 .button {
+    &--variant-filled {
+        border-radius: 16px;
+        padding: 18px 16px;
+        font-size: theme("fontSize.bodyLg");
+        font-weight: theme("fontWeight.bold");
+        letter-spacing: 0.2px;
+    }
+
+    &--variant-rounded {
+        border-radius: 100px;
+        padding: 18px 16px;
+        font-size: theme("fontSize.bodyLg");
+        font-weight: theme("fontWeight.bold");
+        letter-spacing: 0.2px;
+    }
+
+    &--color-primary{
+        background-color: theme("backgroundColor.primary.900");
+        color: white;
+    }
+
+    &--color-secondary{
+        background-color: theme("backgroundColor.primary.50");
+        color: theme("colors.primary.900");
+    }
+
+    &--color-white{
+        background-color: white;
+        color: theme("colors.grayscale.900");
+        border: 1px solid theme("borderColor.grayscale.200");
+        border-radius: 16px;
+    }
 }
