--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,4 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "@/icons-font/iconly.css";
+
+@import "@/components/ui/alert/alert.css";
 @import "@/components/ui/button/button.css";
