--- a/src/components/ui/alert/alert.css
+++ b/src/components/ui/alert/alert.css
@@ -1,1 +1,31 @@
-.alert {}
+.alert {
+    align-items: center;
+    border-radius: 16px;
+    display: flex;
+    gap: 6px;
+    padding: 8px 12px;
+
+    &--color-success {
+        /*prozatimní pozadí*/
+        background-color: rgba(172, 255, 47, 0.212);
+        color: theme("colors.success");
+    }
+
+    &--color-info {
+        /*prozatimní pozadí*/
+        background-color: rgba(0, 0, 255, 0.068);
+        color: theme("colors.info");
+    }
+
+    &--color-warning {
+        /*prozatimní pozadí*/
+        background-color: rgba(255, 255, 0, 0.089);
+        color: theme("colors.warning");
+    }
+
+    &--color-error {
+        /*prozatimní pozadí*/
+        background-color: rgba(255, 0, 0, 0.082);
+        color: theme("colors.error");
+    }
+}
