--- a/src/icons-font/iconly.css
+++ b/src/icons-font/iconly.css
@@ -3,822 +3,829 @@
  */
 
 @font-face {
-  font-display: auto;
-  font-family: "Meal";
-  font-style: normal;
-  font-weight: 400;
-  src: url("./iconly.eot?1729354594089");
-  src: url("./iconly.eot?#iefix") format("embedded-opentype"), url("./iconly.woff2?1729354594089") format("woff2"), url("./iconly.woff?1729354594089") format("woff"), url("./iconly.ttf?1729354594089") format("truetype"), url("./iconly.svg?1729354594089#Meal") format("svg");
+    font-display: auto;
+    font-family: "Meal";
+    font-style: normal;
+    font-weight: 400;
+    src: url("./iconly.eot?1729354594089");
+    src:
+        url("./iconly.eot?#iefix") format("embedded-opentype"),
+        url("./iconly.woff2?1729354594089") format("woff2"),
+        url("./iconly.woff?1729354594089") format("woff"),
+        url("./iconly.ttf?1729354594089") format("truetype"),
+        url("./iconly.svg?1729354594089#Meal") format("svg");
 }
 
-[class="icon"], [class^="icon-"], [class*=" icon-"] {
-  display: inline-block;
-  font-family: "Meal" !important;
-  font-weight: 400;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+[class="icon"],
+[class^="icon-"],
+[class*=" icon-"] {
+    display: inline-block;
+    font-family: "Meal" !important;
+    font-weight: 400;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
 
 .icon-work:before {
-  content: "\e000";
+    content: "\e000";
 }
 
 .icon-wallet:before {
-  content: "\e001";
+    content: "\e001";
 }
 
 .icon-volume-up:before {
-  content: "\e002";
+    content: "\e002";
 }
 
 .icon-volume-off:before {
-  content: "\e003";
+    content: "\e003";
 }
 
 .icon-volume-down:before {
-  content: "\e004";
+    content: "\e004";
 }
 
 .icon-voice:before {
-  content: "\e005";
+    content: "\e005";
 }
 
 .icon-voice-3:before {
-  content: "\e006";
+    content: "\e006";
 }
 
 .icon-video:before {
-  content: "\e007";
+    content: "\e007";
 }
 
 .icon-upload:before {
-  content: "\e008";
+    content: "\e008";
 }
 
 .icon-unlock:before {
-  content: "\e009";
+    content: "\e009";
 }
 
 .icon-time-square:before {
-  content: "\e00a";
+    content: "\e00a";
 }
 
 .icon-time-circle:before {
-  content: "\e00b";
+    content: "\e00b";
 }
 
 .icon-ticket:before {
-  content: "\e00c";
+    content: "\e00c";
 }
 
 .icon-ticket-star:before {
-  content: "\e00d";
+    content: "\e00d";
 }
 
 .icon-tick-square:before {
-  content: "\e00e";
+    content: "\e00e";
 }
 
 .icon-swap:before {
-  content: "\e00f";
+    content: "\e00f";
 }
 
 .icon-star:before {
-  content: "\e010";
+    content: "\e010";
 }
 
 .icon-show:before {
-  content: "\e011";
+    content: "\e011";
 }
 
 .icon-shield-fail:before {
-  content: "\e012";
+    content: "\e012";
 }
 
 .icon-shield-done:before {
-  content: "\e013";
+    content: "\e013";
 }
 
 .icon-setting:before {
-  content: "\e014";
+    content: "\e014";
 }
 
 .icon-send:before {
-  content: "\e015";
+    content: "\e015";
 }
 
 .icon-search:before {
-  content: "\e016";
+    content: "\e016";
 }
 
 .icon-scan:before {
-  content: "\e017";
+    content: "\e017";
 }
 
 .icon-profile:before {
-  content: "\e018";
+    content: "\e018";
 }
 
 .icon-plus:before {
-  content: "\e019";
+    content: "\e019";
 }
 
 .icon-play:before {
-  content: "\e01a";
+    content: "\e01a";
 }
 
 .icon-password:before {
-  content: "\e01b";
+    content: "\e01b";
 }
 
 .icon-paper:before {
-  content: "\e01c";
+    content: "\e01c";
 }
 
 .icon-paper-upload:before {
-  content: "\e01d";
+    content: "\e01d";
 }
 
 .icon-paper-plus:before {
-  content: "\e01e";
+    content: "\e01e";
 }
 
 .icon-paper-negative:before {
-  content: "\e01f";
+    content: "\e01f";
 }
 
 .icon-paper-fail:before {
-  content: "\e020";
+    content: "\e020";
 }
 
 .icon-paper-download:before {
-  content: "\e021";
+    content: "\e021";
 }
 
 .icon-notification:before {
-  content: "\e022";
+    content: "\e022";
 }
 
 .icon-more-square:before {
-  content: "\e023";
+    content: "\e023";
 }
 
 .icon-more-circle:before {
-  content: "\e024";
+    content: "\e024";
 }
 
 .icon-message:before {
-  content: "\e025";
+    content: "\e025";
 }
 
 .icon-logout:before {
-  content: "\e026";
+    content: "\e026";
 }
 
 .icon-login:before {
-  content: "\e027";
+    content: "\e027";
 }
 
 .icon-lock:before {
-  content: "\e028";
+    content: "\e028";
 }
 
 .icon-location:before {
-  content: "\e029";
+    content: "\e029";
 }
 
 .icon-info-square:before {
-  content: "\e02a";
+    content: "\e02a";
 }
 
 .icon-image:before {
-  content: "\e02b";
+    content: "\e02b";
 }
 
 .icon-image-3:before {
-  content: "\e02c";
+    content: "\e02c";
 }
 
 .icon-home:before {
-  content: "\e02d";
+    content: "\e02d";
 }
 
 .icon-hide:before {
-  content: "\e02e";
+    content: "\e02e";
 }
 
 .icon-heart:before {
-  content: "\e02f";
+    content: "\e02f";
 }
 
 .icon-graph:before {
-  content: "\e030";
+    content: "\e030";
 }
 
 .icon-game:before {
-  content: "\e031";
+    content: "\e031";
 }
 
 .icon-folder:before {
-  content: "\e032";
+    content: "\e032";
 }
 
 .icon-filter:before {
-  content: "\e033";
+    content: "\e033";
 }
 
 .icon-filter-3:before {
-  content: "\e034";
+    content: "\e034";
 }
 
 .icon-edit:before {
-  content: "\e035";
+    content: "\e035";
 }
 
 .icon-edit-square:before {
-  content: "\e036";
+    content: "\e036";
 }
 
 .icon-download:before {
-  content: "\e037";
+    content: "\e037";
 }
 
 .icon-document:before {
-  content: "\e038";
+    content: "\e038";
 }
 
 .icon-discovery:before {
-  content: "\e039";
+    content: "\e039";
 }
 
 .icon-discount:before {
-  content: "\e03a";
+    content: "\e03a";
 }
 
 .icon-delete:before {
-  content: "\e03b";
+    content: "\e03b";
 }
 
 .icon-danger-triangle:before {
-  content: "\e03c";
+    content: "\e03c";
 }
 
 .icon-danger-circle:before {
-  content: "\e03d";
+    content: "\e03d";
 }
 
 .icon-close-square:before {
-  content: "\e03e";
+    content: "\e03e";
 }
 
 .icon-chat:before {
-  content: "\e03f";
+    content: "\e03f";
 }
 
 .icon-chart:before {
-  content: "\e040";
+    content: "\e040";
 }
 
 .icon-category:before {
-  content: "\e041";
+    content: "\e041";
 }
 
 .icon-camera:before {
-  content: "\e042";
+    content: "\e042";
 }
 
 .icon-calling:before {
-  content: "\e043";
+    content: "\e043";
 }
 
 .icon-call:before {
-  content: "\e044";
+    content: "\e044";
 }
 
 .icon-call-silent:before {
-  content: "\e045";
+    content: "\e045";
 }
 
 .icon-call-missed:before {
-  content: "\e046";
+    content: "\e046";
 }
 
 .icon-calendar:before {
-  content: "\e047";
+    content: "\e047";
 }
 
 .icon-buy:before {
-  content: "\e048";
+    content: "\e048";
 }
 
 .icon-bookmark:before {
-  content: "\e049";
+    content: "\e049";
 }
 
 .icon-bag:before {
-  content: "\e04a";
+    content: "\e04a";
 }
 
 .icon-bag-3:before {
-  content: "\e04b";
+    content: "\e04b";
 }
 
 .icon-arrow-up:before {
-  content: "\e04c";
+    content: "\e04c";
 }
 
 .icon-arrow-up-square:before {
-  content: "\e04d";
+    content: "\e04d";
 }
 
 .icon-arrow-up-circle:before {
-  content: "\e04e";
+    content: "\e04e";
 }
 
 .icon-arrow-up-3:before {
-  content: "\e04f";
+    content: "\e04f";
 }
 
 .icon-arrow-up-2:before {
-  content: "\e050";
+    content: "\e050";
 }
 
 .icon-arrow-right:before {
-  content: "\e051";
+    content: "\e051";
 }
 
 .icon-arrow-right-square:before {
-  content: "\e052";
+    content: "\e052";
 }
 
 .icon-arrow-right-circle:before {
-  content: "\e053";
+    content: "\e053";
 }
 
 .icon-arrow-right-3:before {
-  content: "\e054";
+    content: "\e054";
 }
 
 .icon-arrow-right-2:before {
-  content: "\e055";
+    content: "\e055";
 }
 
 .icon-arrow-left:before {
-  content: "\e056";
+    content: "\e056";
 }
 
 .icon-arrow-left-square:before {
-  content: "\e057";
+    content: "\e057";
 }
 
 .icon-arrow-left-circle:before {
-  content: "\e058";
+    content: "\e058";
 }
 
 .icon-arrow-left-3:before {
-  content: "\e059";
+    content: "\e059";
 }
 
 .icon-arrow-left-2:before {
-  content: "\e05a";
+    content: "\e05a";
 }
 
 .icon-arrow-down:before {
-  content: "\e05b";
+    content: "\e05b";
 }
 
 .icon-arrow-down-square:before {
-  content: "\e05c";
+    content: "\e05c";
 }
 
 .icon-arrow-down-circle:before {
-  content: "\e05d";
+    content: "\e05d";
 }
 
 .icon-arrow-down-3:before {
-  content: "\e05e";
+    content: "\e05e";
 }
 
 .icon-arrow-down-2:before {
-  content: "\e05f";
+    content: "\e05f";
 }
 
 .icon-add-user:before {
-  content: "\e060";
+    content: "\e060";
 }
 
 .icon-activity:before {
-  content: "\e061";
+    content: "\e061";
 }
 
 .icon-3-user:before {
-  content: "\e062";
+    content: "\e062";
 }
 
 .icon-2-user:before {
-  content: "\e063";
+    content: "\e063";
 }
 
 .icon-work-2:before {
-  content: "\e064";
+    content: "\e064";
 }
 
 .icon-wallet-2:before {
-  content: "\e065";
+    content: "\e065";
 }
 
 .icon-volume-up-2:before {
-  content: "\e066";
+    content: "\e066";
 }
 
 .icon-volume-off-2:before {
-  content: "\e067";
+    content: "\e067";
 }
 
 .icon-volume-down-2:before {
-  content: "\e068";
+    content: "\e068";
 }
 
 .icon-voice-2:before {
-  content: "\e069";
+    content: "\e069";
 }
 
 .icon-voice-2-2:before {
-  content: "\e06a";
+    content: "\e06a";
 }
 
 .icon-video-2:before {
-  content: "\e06b";
+    content: "\e06b";
 }
 
 .icon-upload-2:before {
-  content: "\e06c";
+    content: "\e06c";
 }
 
 .icon-unlock-2:before {
-  content: "\e06d";
+    content: "\e06d";
 }
 
 .icon-time-square-2:before {
-  content: "\e06e";
+    content: "\e06e";
 }
 
 .icon-time-circle-2:before {
-  content: "\e06f";
+    content: "\e06f";
 }
 
 .icon-ticket-2:before {
-  content: "\e070";
+    content: "\e070";
 }
 
 .icon-ticket-star-2:before {
-  content: "\e071";
+    content: "\e071";
 }
 
 .icon-tick-square-2:before {
-  content: "\e072";
+    content: "\e072";
 }
 
 .icon-swap-2:before {
-  content: "\e073";
+    content: "\e073";
 }
 
 .icon-star-2:before {
-  content: "\e074";
+    content: "\e074";
 }
 
 .icon-show-2:before {
-  content: "\e075";
+    content: "\e075";
 }
 
 .icon-shield-fail-2:before {
-  content: "\e076";
+    content: "\e076";
 }
 
 .icon-shield-done-2:before {
-  content: "\e077";
+    content: "\e077";
 }
 
 .icon-setting-2:before {
-  content: "\e078";
+    content: "\e078";
 }
 
 .icon-send-2:before {
-  content: "\e079";
+    content: "\e079";
 }
 
 .icon-search-2:before {
-  content: "\e07a";
+    content: "\e07a";
 }
 
 .icon-scan-2:before {
-  content: "\e07b";
+    content: "\e07b";
 }
 
 .icon-profile-2:before {
-  content: "\e07c";
+    content: "\e07c";
 }
 
 .icon-plus-2:before {
-  content: "\e07d";
+    content: "\e07d";
 }
 
 .icon-play-2:before {
-  content: "\e07e";
+    content: "\e07e";
 }
 
 .icon-password-2:before {
-  content: "\e07f";
+    content: "\e07f";
 }
 
 .icon-paper-2:before {
-  content: "\e080";
+    content: "\e080";
 }
 
 .icon-paper-upload-2:before {
-  content: "\e081";
+    content: "\e081";
 }
 
 .icon-paper-plus-2:before {
-  content: "\e082";
+    content: "\e082";
 }
 
 .icon-paper-negative-2:before {
-  content: "\e083";
+    content: "\e083";
 }
 
 .icon-paper-fail-2:before {
-  content: "\e084";
+    content: "\e084";
 }
 
 .icon-paper-download-2:before {
-  content: "\e085";
+    content: "\e085";
 }
 
 .icon-notification-2:before {
-  content: "\e086";
+    content: "\e086";
 }
 
 .icon-more-square-2:before {
-  content: "\e087";
+    content: "\e087";
 }
 
 .icon-more-circle-2:before {
-  content: "\e088";
+    content: "\e088";
 }
 
 .icon-message-2:before {
-  content: "\e089";
+    content: "\e089";
 }
 
 .icon-logout-2:before {
-  content: "\e08a";
+    content: "\e08a";
 }
 
 .icon-login-2:before {
-  content: "\e08b";
+    content: "\e08b";
 }
 
 .icon-lock-2:before {
-  content: "\e08c";
+    content: "\e08c";
 }
 
 .icon-location-2:before {
-  content: "\e08d";
+    content: "\e08d";
 }
 
 .icon-info-square-2:before {
-  content: "\e08e";
+    content: "\e08e";
 }
 
 .icon-info-circle:before {
-  content: "\e08f";
+    content: "\e08f";
 }
 
 .icon-image-2:before {
-  content: "\e090";
+    content: "\e090";
 }
 
 .icon-image-2-2:before {
-  content: "\e091";
+    content: "\e091";
 }
 
 .icon-home-2:before {
-  content: "\e092";
+    content: "\e092";
 }
 
 .icon-hide-2:before {
-  content: "\e093";
+    content: "\e093";
 }
 
 .icon-heart-2:before {
-  content: "\e094";
+    content: "\e094";
 }
 
 .icon-graph-2:before {
-  content: "\e095";
+    content: "\e095";
 }
 
 .icon-game-2:before {
-  content: "\e096";
+    content: "\e096";
 }
 
 .icon-folder-2:before {
-  content: "\e097";
+    content: "\e097";
 }
 
 .icon-filter-2:before {
-  content: "\e098";
+    content: "\e098";
 }
 
 .icon-filter-2-2:before {
-  content: "\e099";
+    content: "\e099";
 }
 
 .icon-edit-2:before {
-  content: "\e09a";
+    content: "\e09a";
 }
 
 .icon-edit-square-2:before {
-  content: "\e09b";
+    content: "\e09b";
 }
 
 .icon-download-2:before {
-  content: "\e09c";
+    content: "\e09c";
 }
 
 .icon-document-2:before {
-  content: "\e09d";
+    content: "\e09d";
 }
 
 .icon-discovery-2:before {
-  content: "\e09e";
+    content: "\e09e";
 }
 
 .icon-discount-2:before {
-  content: "\e09f";
+    content: "\e09f";
 }
 
 .icon-delete-2:before {
-  content: "\e0a0";
+    content: "\e0a0";
 }
 
 .icon-danger:before {
-  content: "\e0a1";
+    content: "\e0a1";
 }
 
 .icon-close-square-2:before {
-  content: "\e0a2";
+    content: "\e0a2";
 }
 
 .icon-chat-2:before {
-  content: "\e0a3";
+    content: "\e0a3";
 }
 
 .icon-chart-2:before {
-  content: "\e0a4";
+    content: "\e0a4";
 }
 
 .icon-category-2:before {
-  content: "\e0a5";
+    content: "\e0a5";
 }
 
 .icon-camera-2:before {
-  content: "\e0a6";
+    content: "\e0a6";
 }
 
 .icon-calling-2:before {
-  content: "\e0a7";
+    content: "\e0a7";
 }
 
 .icon-call-2:before {
-  content: "\e0a8";
+    content: "\e0a8";
 }
 
 .icon-call-silent-2:before {
-  content: "\e0a9";
+    content: "\e0a9";
 }
 
 .icon-call-missed-2:before {
-  content: "\e0aa";
+    content: "\e0aa";
 }
 
 .icon-calendar-2:before {
-  content: "\e0ab";
+    content: "\e0ab";
 }
 
 .icon-buy-2:before {
-  content: "\e0ac";
+    content: "\e0ac";
 }
 
 .icon-bookmark-2:before {
-  content: "\e0ad";
+    content: "\e0ad";
 }
 
 .icon-bag-2:before {
-  content: "\e0ae";
+    content: "\e0ae";
 }
 
 .icon-bag-2-2:before {
-  content: "\e0af";
+    content: "\e0af";
 }
 
 .icon-arrow-up-4:before {
-  content: "\e0b0";
+    content: "\e0b0";
 }
 
 .icon-arrow-up-square-2:before {
-  content: "\e0b1";
+    content: "\e0b1";
 }
 
 .icon-arrow-up-circle-2:before {
-  content: "\e0b2";
+    content: "\e0b2";
 }
 
 .icon-arrow-up-3-2:before {
-  content: "\e0b3";
+    content: "\e0b3";
 }
 
 .icon-arrow-up-2-2:before {
-  content: "\e0b4";
+    content: "\e0b4";
 }
 
 .icon-arrow-right-4:before {
-  content: "\e0b5";
+    content: "\e0b5";
 }
 
 .icon-arrow-right-square-2:before {
-  content: "\e0b6";
+    content: "\e0b6";
 }
 
 .icon-arrow-right-circle-2:before {
-  content: "\e0b7";
+    content: "\e0b7";
 }
 
 .icon-arrow-right-3-2:before {
-  content: "\e0b8";
+    content: "\e0b8";
 }
 
 .icon-arrow-right-2-2:before {
-  content: "\e0b9";
+    content: "\e0b9";
 }
 
 .icon-arrow-left-4:before {
-  content: "\e0ba";
+    content: "\e0ba";
 }
 
 .icon-arrow-left-square-2:before {
-  content: "\e0bb";
+    content: "\e0bb";
 }
 
 .icon-arrow-left-circle-2:before {
-  content: "\e0bc";
+    content: "\e0bc";
 }
 
 .icon-arrow-left-3-2:before {
-  content: "\e0bd";
+    content: "\e0bd";
 }
 
 .icon-arrow-left-2-2:before {
-  content: "\e0be";
+    content: "\e0be";
 }
 
 .icon-arrow-down-4:before {
-  content: "\e0bf";
+    content: "\e0bf";
 }
 
 .icon-arrow-down-square-2:before {
-  content: "\e0c0";
+    content: "\e0c0";
 }
 
 .icon-arrow-down-circle-2:before {
-  content: "\e0c1";
+    content: "\e0c1";
 }
 
 .icon-arrow-down-3-2:before {
-  content: "\e0c2";
+    content: "\e0c2";
 }
 
 .icon-arrow-down-2-2:before {
-  content: "\e0c3";
+    content: "\e0c3";
 }
 
 .icon-add-user-2:before {
-  content: "\e0c4";
+    content: "\e0c4";
 }
 
 .icon-activity-2:before {
-  content: "\e0c5";
+    content: "\e0c5";
 }
 
 .icon-3-user-2:before {
-  content: "\e0c6";
+    content: "\e0c6";
 }
 
 .icon-2-user-2:before {
-  content: "\e0c7";
+    content: "\e0c7";
 }
