--- a/src/components/ui/loader/loader.module.css
+++ b/src/components/ui/loader/loader.module.css
@@ -3,12 +3,18 @@
     aspect-ratio: 1;
     border-radius: 50%;
     background:
-            radial-gradient(farthest-side,#ffa516 94%,#0000) top/8px 8px no-repeat,
-            conic-gradient(#0000 30%,#ffa516);
-    -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+        radial-gradient(farthest-side, #ffa516 94%, #0000) top/8px 8px no-repeat,
+        conic-gradient(#0000 30%, #ffa516);
+    -webkit-mask: radial-gradient(
+        farthest-side,
+        #0000 calc(100% - 8px),
+        #000 0
+    );
     animation: l13 1s infinite linear;
 }
 
-@keyframes l13{
-    100%{transform: rotate(1turn)}
+@keyframes l13 {
+    100% {
+        transform: rotate(1turn);
+    }
 }
